--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0030_AddColumnChangeVersionForTables.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Changes_0030_AddColumnChangeVersionForTables.mustache
@@ -1,4 +1,4 @@
-{{#NonDerivedAggregateRoots}}
+{{#TrackedTables}}
 ALTER TABLE [{{Schema}}].[{{TableName}}] ADD [ChangeVersion] [BIGINT] DEFAULT (NEXT VALUE FOR [changes].[ChangeVersionSequence]) NOT NULL;
 
-{{/NonDerivedAggregateRoots}}
+{{/TrackedTables}}
