Reorganized mustache files.

--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYearOds/0020-Tables.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYearOds/0020-Tables.mustache
@@ -19,7 +19,7 @@
     GO
 
         {{#HasNonKeyColumnsOrReferences}}
-    {{> MultiYear_0020_Tables__AttributeTable}}
+    {{> MultiYearOds.0020-Tables__AttributeTable}}
         {{/HasNonKeyColumnsOrReferences}}
 
     {{/AggregateRoot}}
@@ -54,7 +54,7 @@
     GO
 
         {{#HasNonKeyColumnsOrReferences}}
-    {{> MultiYear_0020_Tables__AttributeTable}}
+    {{> MultiYearOds.0020-Tables__AttributeTable }}
 
         {{/HasNonKeyColumnsOrReferences}}
     {{/Members}}
