--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYearOds/0030-ForeignKeys.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYearOds/0030-ForeignKeys.mustache
@@ -1,7 +1,7 @@
 {{#Aggregates}}
     {{#AggregateRoot}}
         {{#HasNonKeyColumnsOrReferences}}
-        {{> MultiYear_0030_ForeignKeys__AttributeTable}}
+        {{> MultiYearOds.0030-ForeignKeys__AttributeTable}}
         {{/HasNonKeyColumnsOrReferences}}
 
         {{#IdentifyingReferences}}
@@ -20,7 +20,7 @@
         {{/IdentifyingReferences}}
 
         {{#HasNonKeyColumnsOrReferences}}
-        {{> MultiYear_0030_ForeignKeys__AttributeTable}}
+        {{> MultiYearOds.0030-ForeignKeys__AttributeTable}}
         {{/HasNonKeyColumnsOrReferences}}
 
     {{/Members}}
