Initial work on removing primary key columns that are already incorporated into either the HashKey or the identifying relationship HashKeys from the table (forcing joins to the source to filter). Backed off to allow for discussion with NE.

--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYearOds/0020-Tables.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYearOds/0020-Tables.mustache
@@ -9,10 +9,12 @@
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
             {{/Column}}
         {{/IdentifyingReferences}}
+        {{#HasLocallyDefinedPrimaryKeyColumns}}
         -- Primary key columns
-        {{#PrimaryKeyColumns}}
+            {{#LocallyDefinedPrimaryKeyColumns}}
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
-        {{/PrimaryKeyColumns}}
+            {{/LocallyDefinedPrimaryKeyColumns}}
+        {{/HasLocallyDefinedPrimaryKeyColumns}}
         {{> MultiYearOds.0020-Tables__CommonColumns }}
         -- Primary Key Constraint
         , CONSTRAINT {{TableName}}_PK PRIMARY KEY CLUSTERED (HashKey, SchoolYearContext)
@@ -32,12 +34,12 @@
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
             {{/Column}}
         {{/IdentifyingReferences}}
-        {{#HasContextualPrimaryKeyColumns}}
-        -- Contextual primary key
-        {{#ContextualPrimaryKeyColumns}}
+        {{#HasLocallyDefinedPrimaryKeyColumns}}
+        -- Primary key columns
+            {{#LocallyDefinedPrimaryKeyColumns}}
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
-        {{/ContextualPrimaryKeyColumns}}
-        {{/HasContextualPrimaryKeyColumns}}
+            {{/LocallyDefinedPrimaryKeyColumns}}
+        {{/HasLocallyDefinedPrimaryKeyColumns}}
         {{> MultiYearOds.0020-Tables__CommonColumns }}
         -- Primary key constraint
         , CONSTRAINT {{TableName}}_PK PRIMARY KEY CLUSTERED (
